--- a/src/views/footer.j2
+++ b/src/views/footer.j2
@@ -1,32 +1,90 @@
 <footer class="page-footer">
   <div class="container">
     <div class="page-footer__content">
-      <nav class="page-footer__nav nav">
-        <ul class="nav__list">
-          {% for link in nav %}
-            <li class="nav__item">
-              <a class="nav__link" href="{{ link.href}}.html">{{ link.title }}</a>
-              {% if link.subNav %}
-                <ul class="nav__sub-list">
-                  {% for subLink in link.subNav %}
-                    <li class="nav__sub-item">
-                       <a class="nav__sub-link" href="{{ subLink.href}}.html">{{ subLink.title}}</a>
-                    </li>
-                  {% endfor %}
-                </ul>
-              {% endif %}
-              {% if link.title == "Оборудование" %}
-                <a class="nav__configurator" href="configurators.html" >Конфигуратор</a>
-              {% endif %}
-            </li>
-          {% endfor %}
-        </ul>
+      <nav class="page-footer__nav">
+        <div class="page-footer__top">
+          <a class="page-footer__logo logo" href="./index.html" >
+            <img class="page-footer__logo-image" src="@img/logos/exa-header-logo.svg" alt="Логотип EXASystems" width="156" height="25">
+          </a>
+          <ul class="page-footer__top-nav-list">
+            {% for link in nav.top %}
+              <li class="page-footer__top-nav-list-item">
+                <a class="page-footer__top-nav-link" href="{{ link.href}}.html">{{ link.title }}</a>
+              </li>
+            {% endfor %}
+          </ul>
+          <div class="page-footer__social social">
+            <a class="social__item" href="#!">
+              <svg class="social__item-icon" width="37" height="37" viewBox="0 0 37 37" xmlns="http://www.w3.org/2000/svg">
+                <rect class="social__item-icon-sec" width="37" height="37"/>
+                <g clip-path="url(#clip0_1_424)">
+                  <path class="social__item-icon-main" fill-rule="evenodd" clip-rule="evenodd" d="M10.1917 11.9131H7.8578C7.19099 11.9131 7.05762 12.2368 7.05762 12.5936C7.05762 13.231 7.84887 16.392 10.7417 20.5727C12.6704 23.4279 15.3876 24.9755 17.8601 24.9755C19.3437 24.9755 19.5272 24.6318 19.5272 24.0397V21.8818C19.5272 21.1943 19.6677 21.0571 20.1374 21.0571C20.4836 21.0571 21.0771 21.2355 22.4617 22.6121C24.0441 24.2436 24.305 24.9755 25.1951 24.9755H27.5289C28.1958 24.9755 28.5292 24.6318 28.3369 23.9534C28.1264 23.2773 27.3709 22.2964 26.3683 21.1336C25.8243 20.4708 25.0084 19.757 24.7611 19.4001C24.415 18.9412 24.5139 18.7373 24.7611 18.3295C24.7611 18.3295 27.6046 14.1996 27.9013 12.7976C28.0496 12.2878 27.9013 11.9131 27.1955 11.9131H24.8616C24.2682 11.9131 23.9946 12.2368 23.8462 12.5936C23.8462 12.5936 22.6594 15.5762 20.9781 17.5137C20.4341 18.0745 20.1869 18.253 19.8901 18.253C19.7418 18.253 19.5271 18.0745 19.5271 17.5647V12.7976C19.5271 12.1858 19.3549 11.9131 18.8602 11.9131H15.1927C14.8219 11.9131 14.5989 12.197 14.5989 12.4662C14.5989 13.0461 15.4396 13.1799 15.5262 14.8114V18.3549C15.5262 19.1318 15.3901 19.2727 15.0934 19.2727C14.3022 19.2727 12.3776 16.2767 11.2361 12.8485C11.0126 12.1822 10.7882 11.9131 10.1917 11.9131Z"/>
+                </g>
+              </svg>
+              <span class="visually-hidden">Мы в вк.</span>
+            </a>
+            <a class="social__item" href="#!">
+              <svg class="social__item-icon" width="37" height="37" viewBox="0 0 37 37" xmlns="http://www.w3.org/2000/svg">
+                <g clip-path="url(#clip0_1_431)">
+                  <rect class="social__item-icon-main" width="37" height="37"/>
+                  <g class="social__item-icon-sec">
+                    <path d="M21.7825 23.1863C21.7817 23.052 21.7422 22.9122 21.6924 22.7866C21.6261 22.6215 21.4839 22.5393 21.3053 22.5219C21.096 22.5014 20.9285 22.5859 20.7769 22.7202C20.7161 22.7731 20.6884 22.8521 20.6884 22.8521L20.6916 27.1154V27.2205C20.6916 27.2205 20.7279 27.2695 20.7334 27.2758C20.8567 27.4093 21.0004 27.5151 21.1845 27.5531C21.4878 27.6155 21.7019 27.4891 21.7611 27.2078C21.7762 27.1375 21.7848 27.0649 21.7848 26.993C21.7864 25.7236 21.7888 24.4549 21.7825 23.1863ZM21.7825 23.1863C21.7817 23.052 21.7422 22.9122 21.6924 22.7866C21.6261 22.6215 21.4839 22.5393 21.3053 22.5219C21.096 22.5014 20.9285 22.5859 20.7769 22.7202C20.7161 22.7731 20.6884 22.8521 20.6884 22.8521L20.6916 27.1154V27.2205C20.6916 27.2205 20.7279 27.2695 20.7334 27.2758C20.8567 27.4093 21.0004 27.5151 21.1845 27.5531C21.4878 27.6155 21.7019 27.4891 21.7611 27.2078C21.7762 27.1375 21.7848 27.0649 21.7848 26.993C21.7864 25.7236 21.7888 24.4549 21.7825 23.1863ZM26.5561 16.7569C21.5107 16.6487 16.463 16.6487 11.4169 16.7569C9.66638 16.7941 8.2666 18.2254 8.2666 19.9767V27.8572C8.2666 29.6093 9.66638 31.0406 11.4169 31.0778C16.463 31.186 21.5107 31.186 26.5561 31.0778C28.3074 31.0406 29.7071 29.6093 29.7071 27.8572V19.9767C29.7071 18.2255 28.3074 16.7941 26.5561 16.7569ZM12.8988 28.5753H11.4437V20.3497H9.93732V18.9736H14.4084V20.3465H12.8988V28.5753ZM18.1061 25.1611V28.576H16.8177V27.7956C16.7711 27.8453 16.745 27.8722 16.7205 27.8998C16.4433 28.2127 16.1289 28.4733 15.7276 28.6116C15.5317 28.6787 15.3302 28.7016 15.1241 28.6661C14.8428 28.6195 14.6541 28.4575 14.5403 28.2016C14.4345 27.9654 14.4076 27.7126 14.4068 27.4583C14.4036 26.5182 14.4052 21.5432 14.4052 21.495H15.6905C15.6928 21.5385 15.6976 25.1098 15.6984 26.8516C15.6984 26.9464 15.6991 27.0435 15.7181 27.136C15.7655 27.3698 15.9448 27.4701 16.1699 27.388C16.429 27.2932 16.6265 27.1146 16.7924 26.9006C16.8169 26.8698 16.8169 26.8145 16.8169 26.7702V21.4871L18.1061 21.4839C18.1061 21.484 18.1061 23.9778 18.1061 25.1611ZM23.0077 27.8935C22.8355 28.4117 22.4563 28.6756 21.9112 28.67C21.4681 28.6661 21.1087 28.4899 20.8124 28.1684C20.7792 28.1329 20.6876 28.0357 20.6876 28.0357V28.5744H19.3969V18.9727H20.6876C20.6876 19.9949 20.6876 22.1333 20.6876 22.1333C20.6876 22.1333 20.7603 21.9879 20.8266 21.9129C21.0265 21.6893 21.2698 21.5163 21.57 21.4405C22.0653 21.3165 22.6364 21.4697 22.9081 22.0488C23.0685 22.3908 23.1135 22.7557 23.1135 23.127C23.1159 24.4691 23.1159 25.8112 23.1143 27.1533C23.1135 27.4045 23.0875 27.6527 23.0077 27.8935ZM27.775 27.6234C27.5514 28.2783 27.0893 28.6417 26.4115 28.7412C25.9913 28.8028 25.575 28.7941 25.1808 28.6156C24.6413 28.3723 24.3356 27.9323 24.2044 27.3722C24.1436 27.1116 24.1136 26.8382 24.1104 26.5704C24.1002 25.519 24.1049 24.4668 24.1073 23.4154C24.1081 22.8656 24.2392 22.3585 24.616 21.9374C25.0457 21.4564 25.5955 21.2771 26.2235 21.3173C26.4123 21.3292 26.6051 21.36 26.7844 21.4193C27.395 21.6199 27.7212 22.0773 27.8492 22.6839C27.8982 22.9178 27.9164 23.1603 27.9203 23.3996C27.9306 23.9605 27.9164 25.1967 27.9164 25.1967H25.4446V26.9686C25.4446 27.2869 25.7022 27.5444 26.0205 27.5444C26.3381 27.5444 26.5956 27.2869 26.5956 26.9686V26.0578H27.9235C27.9235 26.0577 27.9432 27.1329 27.775 27.6234ZM26.5956 23.1034C26.5956 22.7858 26.3381 22.5275 26.0205 22.5275C25.7022 22.5275 25.4446 22.7858 25.4446 23.1034V24.0979H26.5956V23.1034ZM21.6924 22.7866C21.6261 22.6215 21.4839 22.5394 21.3053 22.522C21.096 22.5015 20.9285 22.586 20.7769 22.7203C20.7161 22.7732 20.6884 22.8522 20.6884 22.8522L20.6916 27.1155V27.2206C20.6916 27.2206 20.7279 27.2695 20.7334 27.2759C20.8567 27.4094 21.0004 27.5152 21.1845 27.5531C21.4878 27.6155 21.7019 27.4891 21.7611 27.2079C21.7762 27.1376 21.7848 27.0649 21.7848 26.9931C21.7864 25.7236 21.7888 24.455 21.7825 23.1863C21.7817 23.052 21.7422 22.9122 21.6924 22.7866Z" />
+                    <path d="M24.9913 7.64844L24.9909 14.7772H23.67L23.6716 14.0113C23.5255 14.1552 23.4009 14.2895 23.2639 14.4102C23.0211 14.6242 22.746 14.7836 22.4243 14.8466C21.9303 14.9432 21.5096 14.787 21.3521 14.2755C21.2996 14.1051 21.2679 13.9214 21.2666 13.7435V7.64844H22.5776V13.0849C22.5776 13.1569 22.5834 13.2298 22.596 13.3004C22.6358 13.5244 22.8014 13.6299 23.0171 13.5551C23.2801 13.4641 23.4807 13.282 23.651 13.0674C23.6751 13.0368 23.6708 12.9796 23.6708 12.9346V7.64844H24.9913Z" />
+                    <path d="M14.0635 8.88527C13.7768 7.67658 13.176 5.125 13.176 5.125H11.6729C11.6729 5.125 12.8277 8.95518 13.3442 10.6633C13.3628 10.7251 13.3713 10.7922 13.3713 10.8569L13.3707 14.7737H14.7569L14.7563 10.8569C14.7563 10.7922 14.7648 10.7251 14.7834 10.6633C15.2999 8.95518 16.4548 5.125 16.4548 5.125H14.9516C14.9516 5.125 14.3507 7.67658 14.0641 8.88527H14.0635Z" />
+                    <path d="M18.2674 7.46875C17.2228 7.46875 16.376 8.31557 16.376 9.36018V13.0618C16.376 14.1064 17.2228 14.9532 18.2674 14.9532C19.312 14.9532 20.1588 14.1064 20.1588 13.0618V9.36018C20.1589 8.31557 19.312 7.46875 18.2674 7.46875ZM18.8133 13.1365C18.8133 13.4375 18.5684 13.6823 18.2675 13.6823C17.9666 13.6823 17.7217 13.4375 17.7217 13.1365V9.28537C17.7217 8.98441 17.9666 8.7396 18.2675 8.7396C18.5684 8.7396 18.8133 8.98449 18.8133 9.28537V13.1365Z" />
+                  </g>
+                </g>
+              </svg>
+              <span class="visually-hidden">Мы в ютубе.</span>
+            </a>
+          </div>
+          <div class="page-footer__contacts">
+            <a class="page-footer__phone-button" href="tel:+74955404708">
+              <span>+7 495 540 47 08</span>
+            </a>
+            <a class="page-footer__mail-button" href="mailto:info@exasystems.ru">
+              <span>info@exasystems.ru</span>
+              <svg class="page-footer__mail-icon" width="16" height="12" viewBox="0 0 16 12">
+                <use xlink:href="img/sprite.svg#mail-icon"></use>
+              </svg>
+            </a>
+          </div>
+        </div>
+        <div class="page-footer__bottom">
+          <ul class="page-footer__bottom-nav-list">
+            {% for link in nav.bottom %}
+                {% if link.subNav %}
+                <li class="page-footer__bottom-nav-list-item">
+                  <a class="page-footer__bottom-nav-list-link" href="{{ link.href}}.html">{{ link.title | safe }}</a>
+                    <ul class="page-footer__bottom-nav-sub-list">
+                      {% for subLink in link.subNav %}
+                        <li class="page-footer__bottom-nav-sub-list-item">
+                          <a class="page-footer__bottom-nav-sub-list-link" href="{{ subLink.href}}.html">{{ subLink.title}}</a>
+                        </li>
+                      {% endfor %}
+                    </ul>
+                </li>
+                {% endif %}
+                {% if loop.last %}
+                  <li class="page-footer__bottom-nav-list-item">
+                    <ul class="page-footer__bottom-nav-list page-footer__bottom-nav-list--always-column">
+                      {% for link in nav.bottom %}
+                        {% if not link.subNav %}
+                          <li class="page-footer__bottom-nav-list-item">
+                            <a class="page-footer__bottom-nav-list-link" href="{{ link.href}}.html">{{ link.title }}</a>
+                          </li>
+                        {% endif %}
+                      {% endfor %}
+                    </ul>
+                  </li>
+                {% endif %}
+            {% endfor %}
+          </ul>
+        </div>
       </nav>
-      <div class="page-footer__logo-address">
-        <a class="page-footer__logo logo" href="./index.html">
-          <img src="@img/logo-footer.svg" alt="Логотип EXASystems">
-        </a>
-        <p class="page-footer__address">Москва, Новая Басманная ул., 23, стр. 2, офис 316<br>+7 (495) 540-47-08, info@exasystems.ru</p>
+      <div class="page-footer__politics">
+        <a class="page-footer__politics-link" href=""#!>Политика конфиденциальности</a>
+        <p class="page-footer__politics-text">Вся представленная на сайте информация, в том числе касающаяся технических характеристик, наличия на складе, стоимости товаров, носит информационный характер и ни при каких условиях не является публичной офертой, определяемой положениями Статьи 437(2) Гражданского кодекса РФ. Подробную информацию о товаре уточняйте у менеджеров компании</p>
       </div>
     </div>
   </div>
