--- a/src/views/pages/index.j2
+++ b/src/views/pages/index.j2
@@ -7,8 +7,8 @@
 
     <h1 class="visually-hidden">Главная ExaSystems</h1>
     {% include "./blocks/index-swiper.j2" %}
-
-    {% include "./blocks/cases-swiper.j2" %}
+{#
+    {% include "./blocks/cases-swiper.j2" %} #}
 
     {# {% include "./blocks/features-under-key.j2" %}
     {% include "./blocks/services.j2" %}
