--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -18,7 +18,6 @@
 @import "./blocks/daw-list";
 @import "./blocks/form";
 @import "./blocks/section";
-@import "./blocks/nav";
 @import "./blocks/logo";
 @import "./blocks/burger";
 @import "./blocks/menu";
@@ -35,6 +34,7 @@
 @import "./blocks/spinner";
 @import "./blocks/card";
 @import "./blocks/eq-card";
+@import "./blocks/social";
 
 //
 @import "./blocks/index-swiper";
@@ -44,63 +44,63 @@
 @import "./blocks/page-header";
 @import "./blocks/page-main";
 @import "./blocks/page-footer";
-@import "./blocks/vendor";
-@import "./blocks/vendors";
-@import "./blocks/case";
-@import "./blocks/subscribe-section";
-@import "./blocks/case-card";
-@import "./blocks/completed-projects";
-@import "./blocks/other-projects";
-@import "./blocks/features";
-@import "./blocks/feature";
-@import "./blocks/about";
-@import "./blocks/team";
-@import "./blocks/tag";
-@import "./blocks/blog-card";
-@import "./blocks/blog";
-@import "./blocks/actual-news";
-@import "./blocks/blog-article";
-@import "./blocks/popular-articles";
-@import "./blocks/contacts";
-@import "./blocks/certificates";
-@import "./blocks/our-advantages";
-@import "./blocks/reviews";
-@import "./blocks/form-section";
-@import "./blocks/need-help";
-@import "./blocks/consultation";
-@import "./blocks/import-replacement";
-@import "./blocks/filter";
-@import "./blocks/product-card";
-@import "./blocks/catalog";
-@import "./blocks/product-page";
-@import "./blocks/cards-list";
-@import "./blocks/comparison";
-@import "./blocks/index-header";
-@import "./blocks/service-card";
-@import "./blocks/services";
-@import "./blocks/sharing-exp";
-@import "./blocks/work-with-us";
-@import "./blocks/services-solutions";
-@import "./blocks/conf-about";
-@import "./blocks/sfr";
-@import "./blocks/shd";
-@import "./blocks/conf-serv";
-@import "./blocks/person-card";
-@import "./blocks/cert-card";
-@import "./blocks/service-header";
-@import "./blocks/other-service-card";
-@import "./blocks/other-services-swiper";
-@import "./blocks/admin-cons";
-@import "./blocks/conf-group";
-@import "./blocks/server-conf";
-@import "./blocks/soft-catalog";
-@import "./blocks/soft-imp-rep";
-@import "./blocks/os-catalog";
-@import "./blocks/os";
-@import "./blocks/lic-card";
-@import "./blocks/os-lic";
-@import "./blocks/serv-comp";
-@import "./blocks/cases";
-@import "./blocks/index-about-us";
-@import "./blocks/eq-catalog";
-@import "./blocks/category-catalog";
+// @import "./blocks/vendor";
+// @import "./blocks/vendors";
+// @import "./blocks/case";
+// @import "./blocks/subscribe-section";
+// @import "./blocks/case-card";
+// @import "./blocks/completed-projects";
+// @import "./blocks/other-projects";
+// @import "./blocks/features";
+// @import "./blocks/feature";
+// @import "./blocks/about";
+// @import "./blocks/team";
+// @import "./blocks/tag";
+// @import "./blocks/blog-card";
+// @import "./blocks/blog";
+// @import "./blocks/actual-news";
+// @import "./blocks/blog-article";
+// @import "./blocks/popular-articles";
+// @import "./blocks/contacts";
+// @import "./blocks/certificates";
+// @import "./blocks/our-advantages";
+// @import "./blocks/reviews";
+// @import "./blocks/form-section";
+// @import "./blocks/need-help";
+// @import "./blocks/consultation";
+// @import "./blocks/import-replacement";
+// @import "./blocks/filter";
+// @import "./blocks/product-card";
+// @import "./blocks/catalog";
+// @import "./blocks/product-page";
+// @import "./blocks/cards-list";
+// @import "./blocks/comparison";
+// @import "./blocks/index-header";
+// @import "./blocks/service-card";
+// @import "./blocks/services";
+// @import "./blocks/sharing-exp";
+// @import "./blocks/work-with-us";
+// @import "./blocks/services-solutions";
+// @import "./blocks/conf-about";
+// @import "./blocks/sfr";
+// @import "./blocks/shd";
+// @import "./blocks/conf-serv";
+// @import "./blocks/person-card";
+// @import "./blocks/cert-card";
+// @import "./blocks/service-header";
+// @import "./blocks/other-service-card";
+// @import "./blocks/other-services-swiper";
+// @import "./blocks/admin-cons";
+// @import "./blocks/conf-group";
+// @import "./blocks/server-conf";
+// @import "./blocks/soft-catalog";
+// @import "./blocks/soft-imp-rep";
+// @import "./blocks/os-catalog";
+// @import "./blocks/os";
+// @import "./blocks/lic-card";
+// @import "./blocks/os-lic";
+// @import "./blocks/serv-comp";
+// @import "./blocks/cases";
+// @import "./blocks/index-about-us";
+// @import "./blocks/eq-catalog";
+// @import "./blocks/category-catalog";
