--- a/src/scss/blocks/menu.scss
+++ b/src/scss/blocks/menu.scss
@@ -262,32 +262,6 @@
   text-decoration: none;
 }
 
-// .menu__mail {
-//   display: block;
-//   margin-bottom: 28px;
-
-//   font-size: 20px;
-//   line-height: 24px;
-//   color: inherit;
-//   text-decoration: none;
-// }
-
-// .menu__back-call-button {
-//   display: flex;
-//   flex-grow: 1;
-//   max-width: initial;
-//   height: 65px;
-//   margin-right: -18px;
-//   margin-left: -18px;
-
-//   font-weight: 500;
-//   font-size: 19px;
-//   line-height: 23px;
-//   text-decoration: none;
-
-//   clip-path: none;
-// }
-
 .menu--opened {
   @media (width < $desktop-width) {
     position: relative;
@@ -343,6 +317,8 @@
   display: none;
   padding: 10px;
   padding-right: 25px;
+  width: max-content;
+  max-width: 500px;
 
   color: $dark-color;
 
@@ -366,6 +342,10 @@
   }
 }
 
+.menu__dropdown--lvl2 {
+  width: 500px;
+}
+
 .menu__dropdown-content {
   display: flex;
   flex-direction: column;
@@ -379,16 +359,16 @@
   text-decoration: none;
 }
 
-.menu__dropdown-main-lists-container {
+.menu__dropdown-list {
   display: flex;
   flex-direction: column;
 
   gap: 12px;
 }
 
-
-
-
+// .menu__dropdown-list {
+//   display: none;
+// }
 
 .menu__dropdown-list-link {
   font-weight: 300;
@@ -426,9 +406,27 @@
   @media (width >= $desktop-width) {
     &:hover,
     &:focus-within {
-      & .menu__dropdown {
+      & .menu__dropdown--lvl1 {
         position: absolute;
         top: calc(100% - $menu-main-vertical-paddings);
+        z-index: 100;
+
+        display: block;
+      }
+    }
+  }
+}
+
+.menu__dropdown-list-wrapper--has-dropdown {
+  position: relative;
+  @media (width >= $desktop-width) {
+    &:hover,
+    &:focus-within {
+      & .menu__dropdown--lvl2 {
+        position: absolute;
+        left: 100%;
+        top: -10px;
+        // top: calc(100% - $menu-main-vertical-paddings);
         z-index: 100;
 
         display: block;
