--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -44,6 +44,7 @@
 @import "./blocks/page-header";
 @import "./blocks/page-main";
 @import "./blocks/page-footer";
+@import "./blocks/index-about-us";
 // @import "./blocks/vendor";
 // @import "./blocks/vendors";
 // @import "./blocks/case";
@@ -101,6 +102,6 @@
 // @import "./blocks/os-lic";
 // @import "./blocks/serv-comp";
 // @import "./blocks/cases";
-// @import "./blocks/index-about-us";
+
 // @import "./blocks/eq-catalog";
 // @import "./blocks/category-catalog";
