--- a/src/scss/blocks/index-swiper.scss
+++ b/src/scss/blocks/index-swiper.scss
@@ -1,32 +1,45 @@
 .index-swiper__slide {
+  position: relative;
   overflow: hidden;
 
   color: #ffffff;
 
-  background-color: $primary-color;
-  border-radius: 5px;
   cursor: default;
 }
 
 .index-swiper__slide-container {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  width: 100%;
+  min-height: 530px;
 
-  @media (width >= $tablet-width) {
-    display: grid;
+  padding-right: $paddings-mobile;
+  padding-left: $paddings-mobile;
+  padding-top: 57px;
+  padding-bottom: 93px;
 
-    grid-template-columns: 45% 55%;
+  @media (min-width: $tablet-width) {
+    max-width: $tablet-width;
+  }
+
+  @media (width >= $desktop-width) {
+    max-width: $max-tablet-width;
+    padding-top: 100px;
+    padding-right: $paddings-desktop;
+    padding-left: $paddings-desktop;
+    padding-bottom: 120px;
+    min-height: 549px;
   }
 }
 
 .index-swiper__slide-main {
   display: flex;
   flex-direction: column;
-  padding: 24px 21px;
+  max-width: 80%;
+  flex-grow: 1;
 
   @media (width >= $desktop-width) {
-    padding: 37px 50px;
+    max-width: 620px;
   }
 }
 
@@ -35,7 +48,7 @@
   padding: 0;
 
   font-weight: 500;
-  font-size: 35px;
+  font-size: 30px;
   line-height: 115%;
   font-family: $jost-font;
 
@@ -45,8 +58,14 @@
 }
 
 .index-swiper__slide-text {
+  display: -webkit-box;
+  overflow: hidden;
+  -webkit-box-orient: vertical;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 8;
   margin: 0;
   margin-top: 15px;
+  margin-bottom: 25px;
   padding: 0;
 
   font-size: 16px;
@@ -54,6 +73,9 @@
 
   @media (width >= $desktop-width) {
     margin-top: 20px;
+    max-width: 390px;
+
+    -webkit-line-clamp: 5;
   }
 }
 
@@ -62,22 +84,18 @@
 
   max-width: 240px;
   min-height: 57px;
-  margin-top: 25px;
-
-  @media (width < $tablet-width) {
-    display: none;
-  }
+  margin-top: auto;
 }
 
 .index-swiper__image-wrapper {
-  position: relative;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
 
-  @include image-layering;
-
-  @media (width < $tablet-width) {
-    height: 0;
-    padding-bottom: 52.5%;
-  }
+  @include image-gradient;
 }
 
 .index-swiper__slide-image {
@@ -103,5 +121,7 @@
 
   @media (width >= $desktop-width) {
     padding: 15px 0;
+    position: absolute;
+    bottom: 0;
   }
 }
