--- a/src/scss/mixin.scss
+++ b/src/scss/mixin.scss
@@ -16,6 +16,25 @@
     transition-property: opacity, background-color;
   }
 }
+
+@mixin image-gradient {
+  &::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+
+    background: linear-gradient(
+      88deg,
+      rgba(68, 64, 137, 0.79) 0%,
+      rgba(77, 69, 177, 0) 100%
+    );
+  }
+}
+
 @mixin container-link {
   position: absolute;
   top: 0;
@@ -82,11 +101,11 @@
       background-color: $bg2-color;
 
       clip-path: polygon(
-      0 0,
-      100% 0,
-      100% calc($height - $right-bottom-height),
-      $center $height,
-      0 calc($height - $left-bottom-height)
+        0 0,
+        100% 0,
+        100% calc($height - $right-bottom-height),
+        $center $height,
+        0 calc($height - $left-bottom-height)
       );
     }
   }
