поправил блок решаем задачи под ключ

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -45,6 +45,8 @@
 @import "./blocks/page-main";
 @import "./blocks/page-footer";
 @import "./blocks/index-about-us";
+@import "./blocks/features";
+@import "./blocks/feature";
 // @import "./blocks/vendor";
 // @import "./blocks/vendors";
 // @import "./blocks/case";
@@ -52,8 +54,7 @@
 // @import "./blocks/case-card";
 // @import "./blocks/completed-projects";
 // @import "./blocks/other-projects";
-// @import "./blocks/features";
-// @import "./blocks/feature";
+
 // @import "./blocks/about";
 // @import "./blocks/team";
 // @import "./blocks/tag";
