--- a/src/views/blocks/features-under-key.j2
+++ b/src/views/blocks/features-under-key.j2
@@ -2,21 +2,21 @@
   <div class="container">
     <h2 class="features__title">Решаем задачи «под ключ»</h2>
     <ul class="features__list">
-      <li class="feature feature--adv">
-        <p class="feature__title">Выявляем проблемы</p>
-        <p class="feature__desription">Инженеры с опытом от 10&nbsp;лет находят «проблемные места» на вашем объекте</p>
-      </li>
       <li class="feature feature--exp">
+        <p class="feature__title">Выявляем проблемы</p>
+        <p class="feature__desription">Небольшой текст об этапе. В рамках спецификации современных стандартов, ключевые особенности</p>
+      </li>
+      <li class="feature feature--adv">
         <p class="feature__title">Подбираем решение</p>
-        <p class="feature__desription">Зарубежное и отечественное ПО и оборудование позволяет подобрать решения под любую задачу</p>
+        <p class="feature__desription">Небольшой текст об этапе. В рамках В рамках спецификации современных стандартов, ключевые особенности для текущей ситуации современных стандартов, ключевые особенности</p>
       </li>
       <li class="feature feature--no-bur">
         <p class="feature__title">Внедряем</p>
-        <p class="feature__desription">От 1&nbsp;дня с гарантией сроков по договору — 80% проектов запускаем раньше срока</p>
+        <p class="feature__desription">Небольшой текст об этапе. В рамках В рамках спецификации современных стандартов, ключевые особенности для текущей ситуации современных стандартов, ключевые особенности</p>
       </li>
-      <li class="feature feature--result">
+      <li class="feature feature--phone">
         <p class="feature__title">Консультируем</p>
-        <p class="feature__desription">Прямая связь с инженером каждый день в рабочее время — секретарей и «менеджеров»</p>
+        <p class="feature__desription">В рамках спецификации современных стандартов, ключевые особенности для текущей ситуации</p>
       </li>
     </ul>
   </div>
