--- a/src/scss/blocks/feature.scss
+++ b/src/scss/blocks/feature.scss
@@ -108,3 +108,12 @@
     background-position: 0 0;
   }
 }
+.feature--phone {
+  &::before {
+    width: 62px;
+    height: 62px;
+
+    background-image: url("@img/feature-phone.svg");
+    background-position: 0 0;
+  }
+}
