--- a/src/scss/blocks/features.scss
+++ b/src/scss/blocks/features.scss
@@ -1,5 +1,5 @@
 .features {
-  padding: 40px 0;
+  padding: 40px 0 20px;
 }
 
 .features__title {
@@ -59,6 +59,5 @@
 .features--under-key {
   @media (min-width: $desktop-width) {
     padding-top: 95px;
-    padding-bottom: 125px;
   }
 }
