--- a/src/views/pages/index.j2
+++ b/src/views/pages/index.j2
@@ -7,6 +7,7 @@
 
     <h1 class="visually-hidden">Главная ExaSystems</h1>
     {% include "./blocks/index-swiper.j2" %}
+    {% include "./blocks/features-under-key.j2" %}
 {#
     {% include "./blocks/cases-swiper.j2" %} #}
 
