сделал блок Основные направления деятельности

--- a/src/views/pages/index.j2
+++ b/src/views/pages/index.j2
@@ -8,6 +8,15 @@
     <h1 class="visually-hidden">Главная ExaSystems</h1>
     {% include "./blocks/index-swiper.j2" %}
     {% include "./blocks/features-under-key.j2" %}
+
+    <article class="article">
+      <div class="container">
+        <div class="article__content">
+          <h2 class="article__title title">Основные направления деятельности</h2>
+          {% include "./blocks/solutions-list.j2" %}
+        </div>
+      </div>
+    </article>
 {#
     {% include "./blocks/cases-swiper.j2" %} #}
 
