--- a/src/scss/mixin.scss
+++ b/src/scss/mixin.scss
@@ -10,7 +10,7 @@
     width: 100%;
     height: 100%;
 
-    background-color: rgb(77 69 177 / 28%);
+    background-color: rgb(1 29 170 / 30%);
 
     transition: opacity 0.3s ease;
     transition-property: opacity, background-color;
@@ -51,6 +51,24 @@
 
   height: 0;
   padding-bottom: $percentage;
+}
+@mixin list-item-style($leftPadding) {
+  position: relative;
+
+  padding-left: $leftPadding;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0.5em;
+    left: 0;
+
+    width: 0.3em;
+    height: 0.3em;
+
+    background-color: $primary-color;
+    transform: rotate(45deg);
+  }
 }
 @mixin image-in-wrapper {
   position: absolute;
