--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,6 +14,7 @@
 @import "./blocks/tabs";
 @import "./blocks/button";
 @import "./blocks/title";
+@import "./blocks/article";
 @import "./blocks/breadcumbs";
 @import "./blocks/daw-list";
 @import "./blocks/form";
@@ -47,6 +48,7 @@
 @import "./blocks/index-about-us";
 @import "./blocks/features";
 @import "./blocks/feature";
+@import "./blocks/solutions-list";
 // @import "./blocks/vendor";
 // @import "./blocks/vendors";
 // @import "./blocks/case";
