--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -39,6 +39,7 @@
 
 //
 @import "./blocks/index-swiper";
+@import "./blocks/card-swiper";
 
 //
 @import "./blocks/page";
@@ -50,7 +51,7 @@
 @import "./blocks/feature";
 @import "./blocks/solutions-list";
 // @import "./blocks/vendor";
-// @import "./blocks/vendors";
+@import "./blocks/vendors";
 // @import "./blocks/case";
 // @import "./blocks/subscribe-section";
 // @import "./blocks/case-card";
