--- a/src/scss/blocks/article.scss
+++ b/src/scss/blocks/article.scss
@@ -11,6 +11,8 @@
   padding-bottom: 70px;
 }
 .article__content {
+  display: flex;
+  flex-direction: column;
 }
 .article__title {
   margin-bottom: 35px;
