--- a/src/views/pages/index.j2
+++ b/src/views/pages/index.j2
@@ -18,7 +18,7 @@
       </div>
     </article>
 
-    {% set sectionCardSwiperCnt = 1 %}
+    {% set cardSwiperCnt = 1 %}
     {% include "./blocks/swipers/vendors-swiper.j2" %}
 {#
     {% include "./blocks/cases-swiper.j2" %} #}
