--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -52,6 +52,7 @@
 @import "./blocks/solutions-list";
 // @import "./blocks/vendor";
 @import "./blocks/vendors";
+@import "./blocks/facts";
 // @import "./blocks/case";
 // @import "./blocks/subscribe-section";
 // @import "./blocks/case-card";
