--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -36,6 +36,7 @@ $card-font-color: #2a2a2a;
 $light-black: #535353;
 $dark-color: #2a2a2a;
 $light-dark-color: #535353;
+$almost-white-color: #f3f3f3;
 
 // Font
 $jost-font: "Jost", "Arial", sans-serif;
