--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -33,8 +33,8 @@
 @import "./blocks/side-panel";
 @import "./blocks/list";
 @import "./blocks/spinner";
-@import "./blocks/card";
-@import "./blocks/eq-card";
+// @import "./blocks/card";
+// @import "./blocks/eq-card";
 @import "./blocks/social";
 
 //
@@ -53,9 +53,11 @@
 // @import "./blocks/vendor";
 @import "./blocks/vendors";
 @import "./blocks/facts";
+@import "./blocks/case-card";
+@import "./blocks/cases-swiper";
 // @import "./blocks/case";
 // @import "./blocks/subscribe-section";
-// @import "./blocks/case-card";
+
 // @import "./blocks/completed-projects";
 // @import "./blocks/other-projects";
 
