--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -55,6 +55,8 @@
 @import "./blocks/facts";
 @import "./blocks/case-card";
 @import "./blocks/cases-swiper";
+@import "./blocks/form-section";
+@import "./blocks/consultation";
 // @import "./blocks/case";
 // @import "./blocks/subscribe-section";
 
@@ -73,9 +75,9 @@
 // @import "./blocks/certificates";
 // @import "./blocks/our-advantages";
 // @import "./blocks/reviews";
-// @import "./blocks/form-section";
+//
 // @import "./blocks/need-help";
-// @import "./blocks/consultation";
+//
 // @import "./blocks/import-replacement";
 // @import "./blocks/filter";
 // @import "./blocks/product-card";
