--- a/src/views/pages/index.j2
+++ b/src/views/pages/index.j2
@@ -23,6 +23,7 @@
     {% set cardSwiperCnt = cardSwiperCnt + 1 %}
     {% include "./blocks/facts.j2" %}
     {% include "./blocks/swipers/cases-swiper.j2" %}
+    {% include "./blocks/consultation.j2" %}
 {#
     {% include "./blocks/cases-swiper.j2" %} #}
 
@@ -142,6 +143,7 @@
   <script src="./js/card-swipers.min.js" defer></script>
   <script src="./js/index-swiper.min.js" defer></script>
   <script src="./js/modal-image.min.js" defer></script>
+  <script src="./js/engineer-cons.min.js" defer></script>
   {# <script src="./js/cases.min.js" defer></script> #}
   <script src="./js/main.min.js" defer></script>
 {% endblock %}
