--- a/src/views/blocks/consultation.j2
+++ b/src/views/blocks/consultation.j2
@@ -1,25 +1,25 @@
 <section class="consultation form-section section">
-  <div class="container">
+  <div class="consultation__container container">
     <div class="form-section__content">
-      <div class="form-section__left">
-        <h2 class="form-section__title title">Получите консультацию<br>инженера</h2>
-        <p class="form-section__description">
-          Ситуация динамично меняется. В ответ на новые задачи появляются эффективные решения от российских специалистов. Мы держим руку на пульсе. Опишите Вашу задачу, и мы поможем с поиском эффективного решения.
-        </p>
-        <div class="consultation__image-wrapper form-section__image-wrapper">
-          <img class="form-section__image" src="@img/consultation-section-image.png" alt="" width="558" height="389">
-        </div>
-      </div>
       <div class="form-section__form-wrapper">
-        <p class="form-section__form-title">Отправьте заявку</p>
-        <form class="form-section__form form" id="engineer-cons-form" action="https://echo.htmlacademy.ru" method="get">
+        <h2 class="consultation__title title">Получите консультацию инженера ExaSystems с&nbsp;10&#8209;летним опытом</h2>
+        <p class="consultation__par">Опишите Вашу задачу, и мы поможем с поиском эффективного решения</p>
+        <form class="consultation__form form-section__form form" id="engineer-cons-form" action="https://echo.htmlacademy.ru" method="get">
           <label class="form__label">
-            <span class="form-section__label-text form__label-text form__label-text--black">Ваше имя</span>
+            <span class="form__label-text">Ваше имя</span>
             <input class="form__field" type="text" id="engineer-cons-client-name" name="engineer-cons-client-name" placeholder="Введите ваше имя">
+          </label>
+          <label class="form__label">
+            <span class="form__label-text">Компания</span>
+            <input class="form__field" type="text" id="engineer-cons-company-name" name="engineer-cons-company-name" placeholder="Введите название компании">
+          </label>
+          <label class="form__label">
+            <span class="form__label-text">Описание задачи</span>
+            <textarea class="form__field--textarea form__field" name="engineer-cons-task" id="engineer-cons-task" cols="30" rows="10" placeholder="Введите текст"></textarea>
           </label>
           <div class="form__row">
             <label class="form__label form__label--messengers">
-              <span class="form-section__label-text form__label-text form__label-text--black">Как с вами связаться?</span>
+              <span class="form__label-text">Способ связи</span>
               <select class="form__select" id="engineer-cons-messengers" name="engineer-cons-messengers">
                 <option value="Whatsapp">Whatsapp</option>
                 <option value="Telegram">Telegram</option>
@@ -27,16 +27,22 @@
               </select>
             </label>
             <label class="form__label">
-              <span class="form-section__label-text form__label-text form__label-text--black">Ваш телефон</span>
+              <span class="form__label-text">Ваш телефон</span>
               <input class="form__field" type="tel" id="engineer-cons-phone" name="engineer-cons-phone" placeholder="+7 (999) 999-99-99" required data-pristine-required-message="Обязательно к заполнению">
             </label>
           </div>
-          <label class="form__label">
-            <span class="form-section__label-text form__label-text form__label-text--black">Опишите Вашу задачу</span>
-            <textarea class="form__field--textarea form__field" name="engineer-cons-task" id="engineer-cons-task" cols="30" rows="10" placeholder="Введите текст"></textarea>
-          </label>
-          <button class="button form__submit-button" type="submit">Получить консультацию</button>
+          <div class="form__column">
+            <button class="button form__submit-button" type="submit">Получить консультацию</button>
+            <label class="form__label form__label--checkbox">
+              <input class="form__checkbox visually-hidden" type="checkbox" name="admin-cons-politics" id="admin-cons-politics" checked>
+              <span class="form__mark"></span>
+              <span class="form__checkbox-label-text">Согласен с <a href="#!">Политикой конфиденциальности сайта</a></span>
+            </label>
+          </div>
         </form>
+      </div>
+      <div class="consultation__image-wrapper form-section__image-wrapper">
+        <img class="form-section__image" src="@img/consultation-form.jpg" alt="" width="920" height="826" loading="lazy">
       </div>
     </div>
   </div>
