--- a/src/scss/blocks/consultation.scss
+++ b/src/scss/blocks/consultation.scss
@@ -7,6 +7,10 @@
   @media (width < $desktop-width) {
     padding-bottom: 20px;
   }
+
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
 
 .consultation__container {
