--- a/src/scss/blocks/page.scss
+++ b/src/scss/blocks/page.scss
@@ -15,6 +15,21 @@
   color: $black-color;
 }
 
+.page__title {
+  margin: 0;
+  padding: 0;
+  font-family: $jost-font;
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 126%;
+  margin-bottom: 30px;
+
+  @media (width >= $desktop-width) {
+    font-size: 50px;
+    margin-bottom: 40px;
+  }
+}
+
 .menu-opened {
   @media (max-width: $max-tablet-width) {
     & .page-main {
